# version_testing

./: .gitignore  MANIFEST.in  README.md  __init__.py  package.json  pom.xml  pyproject.toml
.github/workflows/: init-release.yml  init-snapshot.yml  presubmit.yml  publish-release.yml  publish-snapshot.yml
src/protos/ai/reporting/: summary.proto
src/protos/authz/: store_policy.proto  store_policy.textproto
src/protos/constants/countries/: countries.proto  countries.textproto  country.proto  country_short_code.proto
src/protos/constants/currencies/: currency.proto
src/protos/constants/datetime/: day_of_week.proto  hour.proto
src/protos/constants/gender/: gender.proto
src/protos/constants/screentype/: ScreenType.proto
src/protos/constants/ui/: chart_orientation.proto  render_type.proto  sorting_direction.proto
src/protos/db/amazon_ads/: amazon_ads.proto
src/protos/db/amazon_seller/: amazon_seller_overview.proto  order.proto  product.proto
src/protos/db/google_ads/: ad_group_ad.proto  advertising_channel_type.proto  campaign.proto  (+5 more)
src/protos/demo/: demo.proto
src/protos/hello/: hello.proto
src/protos/options/: strique_enum_options.proto
src/protos/report/: report_request.proto  report_response.proto
src/protos/send/: send_request.proto
src/protos/view_config/: view_config_request.proto  view_config_response.proto
src/protos/widget/: scorecard.proto  table_column_static_config.proto  widget.proto  widget_bank.proto  widget_types.proto
src/resources/: VERSION
src/resources/tools/: gen-binary-pb.sh  gen-js-ts.sh  version.sh
(+111 files in other folders)
